--- a/it/contatti.html
+++ b/it/contatti.html
@@ -29,7 +29,7 @@
   <a href="index"><img class="svg-img" src="../elements/pan_associati.svg" alt="Logo"></a>
   
   <div class="lang-switch" id="LS1">
-    <a href="../en/contact">EN</a>&nbsp;&nbsp;|&nbsp;
+    <a href="#">EN</a>&nbsp;&nbsp;|&nbsp;
     <a href="#">IT</a>
   </div>
   <div class="DarkModeButton" id="DMB1">
@@ -52,7 +52,7 @@
   <a href="news">News</a>
   <a href="contatti">Contatti</a>
   <div class="lang-switch" id="LS2">
-    <a href="../en/contact">EN</a>&nbsp;&nbsp;|&nbsp;
+    <a href="#">EN</a>&nbsp;&nbsp;|&nbsp;
     <a href="#">IT</a>
   </div>
   <div class="DarkModeButton" id="DMB2">
