--- a/it/index.html
+++ b/it/index.html
@@ -29,7 +29,7 @@
   <a href="index"><img class="svg-img" src="../elements/pan_associati.svg" alt="Logo"></a>
   
   <div class="lang-switch" id="LS1">
-    <a href="../en/index">EN</a>&nbsp;&nbsp;|&nbsp;
+    <a href="#">EN</a>&nbsp;&nbsp;|&nbsp;
     <a href="#">IT</a>
   </div>
   <div class="DarkModeButton" id="DMB1">
@@ -52,7 +52,7 @@
   <a href="news">News</a>
   <a href="contatti">Contatti</a>
   <div class="lang-switch" id="LS2">
-    <a href="../en/index">EN</a>&nbsp;&nbsp;|&nbsp;
+    <a href="#">EN</a>&nbsp;&nbsp;|&nbsp;
     <a href="#">IT</a>
   </div>
   <div class="DarkModeButton" id="DMB2">
@@ -91,16 +91,16 @@
 <!--1-->
   <section class="centered">
     <h4>Progettazione Architettura<br>+ Natura</h4>
-    <p>Siamo una società fondata nel 2001 costituita da un gruppo multidisciplinare di professionisti che operano nei campi della progettazione architettonica e del paesaggio, fino alla pianificazione territoriale.</p>
-    <p>La nostra missione è rivitalizzare spazi degradati, convertendoli in aree vivibili e sostenibili che siano di valore per le comunità locali.</p>
-    <p>Vediamo in questi spazi un'opportunità per migliorare la vita urbana, creare nuovi habitat ed ecosistemi, favorire la biodiversità, e apportare benefici ecologici attraverso infrastrutture che offrano servizi ecosistemici. Ci impegniamo nella lotta contro i cambiamenti climatici adottando strategie di progettazione ispirate alle soluzioni basate sulla natura (Nature Based Solutions, NBS).</p>
+    <p>PAN associati è una società di professionisti che operano nei campi della progettazione architettonica e del paesaggio, fino alla pianificazione territoriale. La nostra missione è proporre nuovi modelli di vivere la città col contributo della natura rigenerando aree degradate in spazi vivibili e sostenibili che siano un valore aggiunto per la comunità.</p>
+    <p>Attraverso i nostri progetti, ci impegniamo a migliorare la vita urbana e a contrastare il cambiamento climatico, creando nuovi habitat ed ecosistemi che favoriscono la biodiversità e apportano benefici mediante infrastrutture erogatrici di servizi ecosistemici.</p>
   </section>
 <!--#2-->
   <section class="split" id="responsive-reverse">
-    <div class="left" style="margin-top: 65px;">
+    <div class="left" style="margin-top: 45px;">
       <div> 
         <h2>Paesaggio</h2>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor</p>
+        <p>I soci fondatori di PAN si occupano di progettazione del paesaggio dall’inizio degli anni 1990 divenendo punto di riferimento per progetti di carattere particolarmente innovativo.
+        <br>Progetti di rigenerazione urbana, grandi parchi urbani, opere in contesti naturalistici di particolare pregio, grandi infrastrutture, restauri e riqualificazioni di giardini storici, opere di forestazione, allestimenti hanno scandito la storia PAN.</p>
       </div>
     </div>
     <div>
@@ -115,7 +115,8 @@
     <div class="right">
       <div> 
         <h2>Architettura</h2>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor</p>
+        <p>PAN è nata sulle orme dell’architetto Raffaele Selleri che ha operato a Milano a partire dagli anni 1960, realizzando importanti opere di architettura, pubbliche e private.
+        <br>I soci PAN proseguono questa straordinaria esperienza con un significativo curriculum comprendente scuole, municipi, biblioteche, spazi museali, uffici pubblici, complessi residenziali pubblici, privati ed in ambito cooperativo, opere di restauro di edifici monumentali, edifici di culto, opere per la collettività e altro ancora.</p>
       </div>
     </div>
   </section>
@@ -123,8 +124,8 @@
   <section class="split">
     <div class="left">
       <div>
-        <h2>Consulenza ambientale</h2>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor.</p>
+        <h2>Pianificazione territoriale</h2>
+        <p>La pianificazione e programmazione fa parte dell’approccio alla progettazione di PAN che, a partire da esperienze di progettazione urbanistica classica, si è orientata nel tempo allo studio dell’infrastruttura verde e dei servizi ecosistemici quale mezzo per immaginare e raggiungere nuovi assetti urbani a misura d’uomo utilizzando metodologie multidisciplinari basate sulla natura.</p>
       </div>
     </div>
     <div>
@@ -134,18 +135,22 @@
 <!--5-->
   <section>
     <h2>News</h2>
-    <a class="news-link" href="404">
-      <p>04/2024</p>
-      <p>Top Scape Paysage n° 53</p>
+    <a class="news-link" href="#">
+      <p>2024</p>
+      <p>Paysage Topscape n°54</p>
       <p style="text-align: right; padding-right: 30px;">Pubblicazione</p></a>
-    <a class="news-link" href="404">
-      <p>04/2024</p>
-      <p>Rivista Industria delle costruzioni n°493</p>
-      <p style="text-align: right; padding-right: 30px;">Pubblicazione</p></a>
-    <a class="news-link" href="404">
-      <p>04/2024</p>
-      <p>Top Scape Paysage n° 46</p>
-      <p style="text-align: right; padding-right: 30px;">Pubblicazione</p></a>
+    <a class="news-link" href="#">
+      <p>2023</p>
+      <p>Simposio Internazionale City'scape</p>
+      <p style="text-align: right; padding-right: 30px;">Evento</p></a>
+    <a class="news-link" href="#">
+      <p>2023</p>
+      <p>Avvenire</p>
+      <p style="text-align: right; padding-right: 30px;">Articolo</p></a>
+    <a class="news-link" href="#">
+      <p>2023</p>
+      <p>Premio City Brand and Turism landscape award</p>
+      <p style="text-align: right; padding-right: 30px;">Premio</p></a>
   </section>
 </main>
 
