--- a/it/studio.html
+++ b/it/studio.html
@@ -29,7 +29,7 @@
   <a href="index"><img class="svg-img" src="../elements/pan_associati.svg" alt="Logo"></a>
   
   <div class="lang-switch" id="LS1">
-    <a href="../en/studio">EN</a>&nbsp;&nbsp;|&nbsp;
+    <a href="#">EN</a>&nbsp;&nbsp;|&nbsp;
     <a href="#">IT</a>
   </div>
   <div class="DarkModeButton" id="DMB1">
@@ -51,15 +51,15 @@
   <a href="progetti">Progetti</a>
   <a href="news">News</a>
   <a href="contatti">Contatti</a>
-  <!--<div class="lang-switch" id="LS2">
-    <a href="../en/studio">EN</a>&nbsp;&nbsp;|&nbsp;
+  <div class="lang-switch" id="LS2">
+    <a href="#">EN</a>&nbsp;&nbsp;|&nbsp;
     <a href="#">IT</a>
   </div>
   <div class="DarkModeButton" id="DMB2">
     <input type="checkbox" id="darkModeToggle2" class="darkModeToggle">
     <label for="darkModeToggle2" class="darkModeLabel">
     </label>
-  </div>-->
+  </div>
 </div>
 
 <main>
@@ -74,21 +74,26 @@
 <!--#2-->
   <section class="mono news-section section1">
       <h2>Chi siamo</h2>
-      <p>PAN Associati S.R.L. è una società fondata a Milano nel 2001 e costituita da un team multidisciplinare di professionisti, tra cui architetti, paesaggisti, agronomi e forestali. Operiamo nei settori della progettazione architettonica e del paesaggio, della pianificazione territoriale e della consulenza ambientale sia in Italia che all'estero.</p>
-      <p>PAN si distingue come studio di riferimento nel settore ambientale, vantando un portfolio che include la progettazione paesaggistica in aree naturali di grande pregio, quali parchi nazionali e regionali, la riqualificazione di grandi parchi e spazi urbani, progetti paesaggistici di inserimento ambientale di grandi opere infrastrutturali, il restauro di parchi e giardini storici, la riqualificazione ecologica di aree degradate, nonché la progettazione di giardini pensili e verticali e l'implementazione di progetti di forestazione urbana.</p>
+      <p>PAN Associati S.R.L. nasce a Milano nel 2001 costituita da un team multidisciplinare di professionisti (architetti, paesaggisti, agronomi, forestali, ingegneri). Soci fondatori di riferimento sono Gaetano Selleri, Benedetto Selleri, Giovanni Sanesi. Operiamo nei settori della progettazione architettonica e del paesaggio, della pianificazione territoriale e della consulenza in campo ambientale sia in Italia che all'estero.</p>
+
+      <div class="box"><img src="../library/studio/1.jpg"></div>
+
+      <p>Nel settore del paesaggio (e ambientale) PAN è studio di riferimento con un portfolio che include progetti in aree naturali, parchi e spazi urbani, grandi opere infrastrutturali, restauro di parchi e giardini storici, riqualificazione ecologica di aree degradate, forestazione urbana, giardini pensili e verticali, pianificazione territoriale.</p>
   </section>
   <section class="mono news-section section1">
-      <h2>Approccio</h2>
-      <p>Con oltre due decenni di esperienza, PAN Associati adotta un approccio multidisciplinare che fonde competenze tecniche e teoriche avanzate.</p>
-      <p>La nostra visione si concentra sul recupero e la riqualificazione di spazi degradati, trasformandoli in ambienti vivibili e sostenibili che arricchiscano le comunità locali attraverso un approccio sensibile nei confronti dell’ambiente e della natura.</p>
-      <p>Il nostro processo di progettazione presta attenzione a ogni aspetto dell'ecosistema locale, mirando alla creazione di paesaggi funzionali e resilienti. Integriamo principi di ecologia urbana nei nostri progetti, promuovendo la biodiversità attraverso la creazione di nuovi habitat ed ecosistemi. Ci impegniamo a fornire benefici ecologici significativi mediante soluzioni basate sulla natura (Nature Based Solutions, NBS), contribuendo così attivamente alla lotta contro i cambiamenti climatici.</p>
+      <h2>Progettiamo oggi i paesaggi di domani</h2>
+      <p>L'approccio di Pan Associati è profondamente radicato nel rispetto per l'ambiente e mira a creare spazi che non solo soddisfino le esigenze attuali ma siano anche resilienti e adatti alle generazioni future.</p>
+      <p>PAN adotta un approccio multidisciplinare che fonde competenze tecniche e teoriche avanzate collaborando in modo integrato e sistematico con colleghi paesaggisti, ingegneri, naturalisti, architetti. Attraverso l’utilizzo di tecniche che integrano la natura come strumento principale di innovazione e rigenerazione riduciamo gli impatti ambientali e promuoviamo la lotta contro i cambiamenti climatici. Applichiamo i principi di ecologia urbana nei nostri progetti, promuovendo la biodiversità attraverso la creazione di nuovi habitat ed ecosistemi.</p>
+      <p>Collaboriamo strettamente con le comunità, gli stakeholder e gli esperti ambientali per garantire che ogni spazio da noi creato contribuisca attivamente alla rigenerazione ambientale e al miglioramento della vita urbana.</p>
+
+      <div class="box"><img src="../library/progetti/parco-della-pace/15.jpg"></div>
   </section>
   <section class="mono news-section section1">
       <h2>Servizi</h2>
       <h1>Progettazione e direzione lavori</h1>
       <p>L’attività di progettazione, svolta sia nel settore dell’edilizia pubblica che privata, è seguita in tutte le sue fasi, dalla progettazione preliminare alla direzione lavori e coordinamento sicurezza in fase di progettazione ed esecuzione. Pan può vantare nel suo portfolio la realizzazione di numerose opere complesse, che includono componenti ingegneristiche, architettoniche oltre che ad paesaggistiche ed agronomiche.</p>
       <h1>Consulenza ambientale</h1>
-      <p>Oltre che alla progettazione PAN Associati si occupa di servizi legati alla consulenza ambientale. Offriamo consulenze specialistiche, tra cui studi di fattibilità, due diligence, analisi agronomiche, censimenti e analisi botaniche e forestali, analisi e studi urbanistici, verifiche e studi ambientali (Via, Vinca, Relazioni paesaggistiche etc..) per autorizzazioni ambientali di piani e progetti.  Grazie alla nostra esperienza consolidata e alla profonda conoscenza della legislazione ambientale, siamo in grado di guidare i progetti attraverso il complesso processo di ottenimento delle autorizzazioni ambientali. Ciò assicura che ogni progetto rispetti le norme vigenti e contribuisca alla conservazione e alla tutela dell’ambiente naturale.</p>
+      <p>Oltre che alla progettazione PAN Associati si occupa di servizi legati alla consulenza ambientale. Offriamo consulenze specialistiche, tra cui studi di fattibilità, due diligence, analisi agronomiche, censimenti e analisi botaniche e forestali, studi urbanistici, verifiche e studi ambientali (Via, Vinca, Relazioni paesaggistiche etc..) per l’ottenimento di autorizzazioni ambientali di piani e progetti.</p>
   </section>
   <section class="mono news-section section1">
     <h2>Clients & Partners</h2>
