--- a/it/404.html
+++ b/it/404.html
@@ -29,7 +29,7 @@
   <a href="index"><img class="svg-img" src="../elements/pan_associati.svg" alt="Logo"></a>
   
   <div class="lang-switch" id="LS1">
-    <a href="../en/404">EN</a>&nbsp;&nbsp;|&nbsp;
+    <a href="#">EN</a>&nbsp;&nbsp;|&nbsp;
     <a href="#">IT</a>
   </div>
   <div class="DarkModeButton" id="DMB1">
@@ -52,7 +52,7 @@
   <a href="news">News</a>
   <a href="contatti">Contatti</a>
   <div class="lang-switch" id="LS2">
-    <a href="../en/404">EN</a>&nbsp;&nbsp;|&nbsp;
+    <a href="#">EN</a>&nbsp;&nbsp;|&nbsp;
     <a href="#">IT</a>
   </div>
   <div class="DarkModeButton" id="DMB2">
@@ -69,8 +69,8 @@
   </section>
 <!--#1-->
   <section class="mono">
-      <h2>Il nostro sito è attualmente<br>in costruzione</h2>
-      <p>Ci scusiamo per il disagio...<br>Tieniti informato e vieni a trovarci di tanto in tanto per vedere se è cambiato qualcosa ;)</p>
+      <h2>Il nostro sito è ancora<br>in costruzione</h2>
+      <p>Ci scusiamo per il disagio...<br>Stiamo facendo tutto il possibile per rimettere tutto in ordine nel più breve tempo possibile.</p>
       <div class="box">
         <a href="index" class="classic-link">Ritorna a la home</a>
       </div>
