--- a/it/news.html
+++ b/it/news.html
@@ -29,7 +29,7 @@
   <a href="index"><img class="svg-img" src="../elements/pan_associati.svg" alt="Logo"></a>
   
   <div class="lang-switch" id="LS1">
-    <a href="../en/news">EN</a>&nbsp;&nbsp;|&nbsp;
+    <a href="#">EN</a>&nbsp;&nbsp;|&nbsp;
     <a href="#">IT</a>
   </div>
   <div class="DarkModeButton" id="DMB1">
@@ -52,7 +52,7 @@
   <a href="news">News</a>
   <a href="contatti">Contatti</a>
   <div class="lang-switch" id="LS2">
-    <a href="../en/news">EN</a>&nbsp;&nbsp;|&nbsp;
+    <a href="#">EN</a>&nbsp;&nbsp;|&nbsp;
     <a href="#">IT</a>
   </div>
   <div class="DarkModeButton" id="DMB2">
@@ -64,28 +64,95 @@
 
 <main style="padding-bottom: 50px;">
 <!--#0-->
-
-<!--#1-->
   <section class="menu">
     <button class="filter-btn showSectionButton" data-filter="section1">Pubblicazioni</button>
     <button class="filter-btn showSectionButton" data-filter="section2">Eventi</button>
     <button class="filter-btn showSectionButton" data-filter="section3">Articoli</button>
     <button class="filter-btn showSectionButton" data-filter="section4">Premi</button>
   </section>
-<!--#2-->
+<!--#1-->
   <section class="news-section section1">
-    <a class="news-link" href="404">
-      <p>04/2024</p>
-      <p>Top Scape Paysage n° 53</p>
+    <a class="news-link" href="#">
+      <p>2024</p>
+      <p>Paysage Topscape n°54</p>
       <p style="text-align: right; padding-right: 30px;">Pubblicazione</p></a>
-    <a class="news-link" href="404">
-      <p>04/2024</p>
-      <p>Rivista Industria delle costruzioni n°493</p>
+    <a class="news-link" href="#">
+      <p>2023</p>
+      <p>L'industria delle Costruzioni n°193</p>
       <p style="text-align: right; padding-right: 30px;">Pubblicazione</p></a>
-    <a class="news-link" href="404">
-      <p>04/2024</p>
-      <p>Top Scape Paysage n° 46</p>
+    <a class="news-link" href="#">
+      <p>2021</p>
+      <p>Paysage Topscape n°46</p>
       <p style="text-align: right; padding-right: 30px;">Pubblicazione</p></a>
+    <a class="news-link" href="#">
+      <p>2021</p>
+      <p>Aiapp Architettura del Paesaggio n°42</p>
+      <p style="text-align: right; padding-right: 30px;">Pubblicazione</p></a>
+    <a class="news-link" href="#">
+      <p>2017</p>
+      <p>Pisa 4.0 Libro</p>
+      <p style="text-align: right; padding-right: 30px;">Pubblicazione</p></a>
+    <a class="news-link" href="#">
+      <p>2017</p>
+      <p>IoArch n°73</p>
+      <p style="text-align: right; padding-right: 30px;">Pubblicazione</p></a>
+    <a class="news-link" href="#">
+      <p>2016</p>
+      <p>Paysage Topscape n°24</p>
+      <p style="text-align: right; padding-right: 30px;">Pubblicazione</p></a>
+    <a class="news-link" href="#">
+      <p>2016</p>
+      <p>Top Scape Paysage n°23</p>
+      <p style="text-align: right; padding-right: 30px;">Pubblicazione</p></a>
+    <a class="news-link" href="#">
+      <p>2016</p>
+      <p>NIP n°35</p>
+      <p style="text-align: right; padding-right: 30px;">Pubblicazione</p></a>
+    <a class="news-link" href="#">
+      <p>2016</p>
+      <p>Libro un Bosco per Roma</p>
+      <p style="text-align: right; padding-right: 30px;">Pubblicazione</p></a>
+    <a class="news-link" href="#">
+      <p>2016</p>
+      <p>Architettura del Paesaggio n°32</p>
+      <p style="text-align: right; padding-right: 30px;">Pubblicazione</p></a>
+    <a class="news-link" href="#">
+      <p>2015</p>
+      <p>Utet (i paesaggi di Expo 2015)</p>
+      <p style="text-align: right; padding-right: 30px;">Pubblicazione</p></a>
+    <a class="news-link" href="#">
+      <p>2015</p>
+      <p>Abitare</p>
+      <p style="text-align: right; padding-right: 30px;">Pubblicazione</p></a>
+  </section>
+<!--#2-->
+  <section class="news-section section2">
+    <a class="news-link" href="#">
+      <p>2023</p>
+      <p>Simposio Internazionale City'scape</p>
+      <p style="text-align: right; padding-right: 30px;">Evento</p></a>
+  </section>
+<!--#3-->
+  <section class="news-section section3">
+    <a class="news-link" href="#">
+      <p>2023</p>
+      <p>Avvenire</p>
+      <p style="text-align: right; padding-right: 30px;">Articolo</p></a>
+  </section>
+<!--#4-->
+  <section class="news-section section4">
+    <a class="news-link" href="#">
+      <p>2023</p>
+      <p>Premio City Brand and Turism landscape award</p>
+      <p style="text-align: right; padding-right: 30px;">Premio</p></a>
+    <a class="news-link" href="#">
+      <p>2019</p>
+      <p>Premio City Brand and Turism landscape award</p>
+      <p style="text-align: right; padding-right: 30px;">Premio</p></a>
+    <a class="news-link" href="#">
+      <p>2018</p>
+      <p>Permio Ecotech Green</p>
+      <p style="text-align: right; padding-right: 30px;">Premio</p></a>
   </section>
 </main>
 
@@ -105,6 +172,6 @@
   <p class="note">PAN Associati s.r.l.&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;© Copyright 2024&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a class="text-link" href="privacy">Privacy e Cookie Policy</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;Construit avec &#9825; par <a href="https://baptistelevaux.github.io/">BSL</a></p>
 </footer>
 
-<script src="../scripts/script-page-filter.js"></script>
+<script src="../scripts/script-page-shower.js"></script>
 </body>
 </html>
