--- a/index.html
+++ b/index.html
@@ -117,6 +117,8 @@
         </main>
 
         <div class="footer">
+            <img src="library/elements/anim/arthur_et_gentiane.png" alt="arthur et gentiane" title="arthur et gentiane" class="mobile">
+
             <h1>bonjour@dalaheim-castellum.eu
             <br>0032 498 83 74</h1>
 
