--- a/index.html
+++ b/index.html
@@ -25,14 +25,16 @@
         </header>
 
         <nav>
-            <img id="menuButton1" src="library/elements/menu/B/menu.png" data-hover="library/elements/menu/A/menu.png" class="hover-img" alt="menu" title="menu">
-            <img id="menuButton2" src="library/elements/menu/B/menu_vertical.png" data-hover="library/elements/menu/A/menu_vertical.png" class="hover-img" alt="menu" title="menu">
+            <img id="menuButton1" src="library/elements/menu/B/menu.png" data-hover="library/elements/menu/A/menu.png" class="hover-img" alt="menu" title="menu" style="float: right;">
+            <img id="menuButton2" src="library/elements/menu/B/menu_vertical.png" data-hover="library/elements/menu/A/menu_vertical.png" class="hover-img" alt="menu" title="menu" style="float: right;">
 
             <div id="navLinks">
-                <a href="equipe"><img src="library/elements/menu/B/equipe.png" data-hover="library/elements/menu/A/equipe.png" class="hover-img" id="image1" alt="l'équipe" title="l'équipe"></a>
-                <a href="mycelium"><img src="library/elements/menu/B/mycelium.png" data-hover="library/elements/menu/A/mycelium.png" class="hover-img" id="image2" alt="mycélium" title="mycélium"></a>
-                <a href="vins"><img src="library/elements/menu/B/les_vins.png" data-hover="library/elements/menu/A/les_vins.png" class="hover-img" id="image3" alt="les vins" title="les vins"></a>
-                <a href="trouver"><img src="library/elements/menu/B/nous_trouver.png" data-hover="library/elements/menu/A/nous_trouver.png" class="hover-img" id="image4" alt="nous trouver" title="nous trouver"></a>
+                <div>
+                    <a href="equipe"><img src="library/elements/menu/equipe.png" alt="l'équipe" title="l'équipe"></a>
+                    <a href="vins"><img src="library/elements/menu/les_vins.png" alt="les vins" title="les vins"></a>
+                   <a href="trouver"><img src="library/elements/menu/nous_trouver.png" alt="nous trouver" title="nous trouver"></a>
+                   <a href="mycelium"><img src="library/elements/menu/mycelium.png" alt="mycélium" title="mycélium"></a>
+                </div>
             </div>
         </nav>
 
@@ -48,6 +50,9 @@
                     <p>Dès le IXe siècle, la vigne est cultivée en Belgique. La plupart des régions dont les sols étaient propices à la vigne, ont vu l'apparition de vignobles aux XIVe et XVe siècles. Ce fut le cas à Dalhem. Dans les archives du Royaume à Bruxelles se trouve un document qui décrit en 1394 le "Vignoble du Château" sur les terrains dénommés dans le cadastre "Thiers des vignes" où se trouve maintenant notre vignoble. C'est le comte de Dalhem qui a fait ériger le "Vignoble du Château" sur la pente bien exposée entre le Péri et la courbe de la Berwinne. Du vignoble, nous avons une splendide vue sur le vieux Dalhem, la mine de Blegny et tous les villages au sud de Dalhem. Au nord et au nord-est, les ceps sont bien protégés par les bois. Le vignoble est entretenu de façon tout à fait écologique. Aucun pesticide n'est utilisé contre les "mauvaises" herbes ou contre les insectes. Cela est possible quand sont employés de nouveaux cépages résistants et adaptés au terroir. Le chais se trouve dans la vieille ville. Tout y est traité de façon naturelle. Le "Dalaheim Castellum" est donc un vin tout à fait écologique. Le but oenologique est de produire des vins typiques pour Dalhem, des cépages adaptés à la région. Nous avons pour but de créer de nouveaux arômes et goûts bien reconnaissables. Situé sur les pentes de l'ancien vignoble du comte de Dalhem, celui-ci est exposé plein sud et en terrasses. Il se compose de 4500 pieds de vignes répartis sur 2 hectares. Les vignes sont taillées de telle sorte que les raisins soient en hauteur afin que les blaireaux n'y aient pas accés.</p>
                 </span>
                 </div>
+              </section>
+              <section>
+                <img src="library/elements/anim/arthur_et_gentiane.png" alt="arthur et gentiane" title="arthur et gentiane" class="mobile">
               </section>
 
             <!--
@@ -117,7 +122,7 @@
         </main>
 
         <div class="footer">
-            <img src="library/elements/anim/arthur_et_gentiane.png" alt="arthur et gentiane" title="arthur et gentiane" class="mobile">
+            
 
             <h1>bonjour@dalaheim-castellum.eu
             <br>0032 498 83 74</h1>
@@ -165,26 +170,19 @@
             });
 
             // Navigation
-            var hideTimeout;
-            function showMenu() {
+            function toggleMenu() {
             var navLinks = document.getElementById("navLinks");
-            navLinks.style.display = "block";
-            if (hideTimeout) {
-            clearTimeout(hideTimeout);
-            }
-            }
-            function hideMenu() {
-            hideTimeout = setTimeout(function() {
-            var navLinks = document.getElementById("navLinks");
+            if (navLinks.style.display === "block") {
             navLinks.style.display = "none";
-            }, 1500);
+            } else {
+            navLinks.style.display = "block";
             }
-            document.getElementById("menuButton1").addEventListener("mouseover", showMenu);
-            document.getElementById("menuButton1").addEventListener("mouseout", hideMenu);
-            document.getElementById("menuButton2").addEventListener("mouseover", showMenu);
-            document.getElementById("menuButton2").addEventListener("mouseout", hideMenu);
-            document.getElementById("navLinks").addEventListener("mouseover", showMenu);
-            document.getElementById("navLinks").addEventListener("mouseout", hideMenu);
+            }
+            document.getElementById("menuButton1").addEventListener("click", toggleMenu);
+            document.getElementById("menuButton2").addEventListener("click", toggleMenu);
+            document.getElementById("closeButton").addEventListener("click", function() {
+            document.getElementById("navLinks").style.display = "none";
+            });
         </script>
     </body>
 </html>
