--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div>
                     <a href="equipe"><img src="library/elements/menu/equipe.png" alt="l'équipe" title="l'équipe"></a>
                     <a href="vins"><img src="library/elements/menu/les_vins.png" alt="les vins" title="les vins"></a>
-                   <a href="trouver"><img src="library/elements/menu/nous_trouver.png" alt="nous trouver" title="nous trouver"></a>
+                   <a href="vente"><img src="library/elements/menu/nous_trouver.png" alt="nous trouver" title="nous trouver"></a>
                    <a href="mycelium"><img src="library/elements/menu/mycelium.png" alt="mycélium" title="mycélium"></a>
                 </div>
             </div>
@@ -48,7 +48,6 @@
                     <h1 style="margin-bottom: 50px;">Ingénieur, industriel lui, Arthur Joskin commence à aider Bart dans ses travaux mécaniques début 2018. Il prend vite goût aux principes de vinification, aux charmes du domaine et participe entièrement à l'exceptionnelle vendange de 2018. Toujours présent avec Bart dans tous les processus de vinification, il acquiert le satut d'indépendant à titre complémentaire et commence à écouler la production.</h1>
 
                     <p>Dès le IXe siècle, la vigne est cultivée en Belgique. La plupart des régions dont les sols étaient propices à la vigne, ont vu l'apparition de vignobles aux XIVe et XVe siècles. Ce fut le cas à Dalhem. Dans les archives du Royaume à Bruxelles se trouve un document qui décrit en 1394 le "Vignoble du Château" sur les terrains dénommés dans le cadastre "Thiers des vignes" où se trouve maintenant notre vignoble. C'est le comte de Dalhem qui a fait ériger le "Vignoble du Château" sur la pente bien exposée entre le Péri et la courbe de la Berwinne. Du vignoble, nous avons une splendide vue sur le vieux Dalhem, la mine de Blegny et tous les villages au sud de Dalhem. Au nord et au nord-est, les ceps sont bien protégés par les bois. Le vignoble est entretenu de façon tout à fait écologique. Aucun pesticide n'est utilisé contre les "mauvaises" herbes ou contre les insectes. Cela est possible quand sont employés de nouveaux cépages résistants et adaptés au terroir. Le chais se trouve dans la vieille ville. Tout y est traité de façon naturelle. Le "Dalaheim Castellum" est donc un vin tout à fait écologique. Le but oenologique est de produire des vins typiques pour Dalhem, des cépages adaptés à la région. Nous avons pour but de créer de nouveaux arômes et goûts bien reconnaissables. Situé sur les pentes de l'ancien vignoble du comte de Dalhem, celui-ci est exposé plein sud et en terrasses. Il se compose de 4500 pieds de vignes répartis sur 2 hectares. Les vignes sont taillées de telle sorte que les raisins soient en hauteur afin que les blaireaux n'y aient pas accés.</p>
-                </span>
                 </div>
               </section>
               <section>
@@ -88,50 +87,16 @@
             <p>Cépage hybride venu de Suisse. C'est le vin le plus puissant de notre gamme. Les raisins sont laissés en macération pendant trois à quatre semaines pour produire ce vin à la robe sombre. Les fruits rouges comme le sureau sont présents au nez ainsi qu'au niveau du goût. Un vieillissement dans des cuves inox pendants 3 à 4 ans est nécessaire pour adoucir sont goût.
             <br>Ces vignes ont 20 ans.</p>
 
-            <h1>Pays de herve</h1>
-            <p>- <a href="http://www.fermedegerardsart.be/cms/">La ferme de Gérard Sart (Julémont)</a>
-            <br>- <a href="http://www.fermedelawaide.be/">La ferme de la Waide (Blegny)</a>
-            <br>- <a href="">La ferme Tri Dieu (Bilstain)  </a>
-            <br>- <a href="http://magasins.carrefour.eu/fr/s/carrefour/carrefour-market-aubel/719">Carrefour Market (Aubel)</a>
-            <br>- <a href="http://www.alimentationducentre.be/">Alimentation du centre (Aubel)</a>
-            <br>- <a href="https://lpdpp.be/">Le Panier des Producteurs Passionnés (Mortroux)</a>
-            <br>- <a href="">Maison Buchet (Herve)</a></p>
-
-            <h1>Liège</h1>
-            <p>- <a href="https://www.lesvintrepides.com/">Les vintrépides</a>
-            <br>- <a href="http://le-potiquet.business.site/">Le potiquet</a>
-            <br>- <a href="http://www.100lg.be/temp/">100% Liègeois</a>
-            <br>- <a href="http://chezgarcon.be/">Chez garçon</a>
-            <br>- <a href="http://www.bsmvins.be/">Vin qu'on sème</a></p>
-
-            <h1>Autres</h1>
-            <p>- <a href="https://magasins.carrefour.eu/fr/s/carrefour/carrefour-market-vise/559">Carrefour market (Visé)</a>
-            <br>- <a href="https://lamaisonduterroir.online/">La maison du Terroir (Soumagne)</a>
-            <br>- <a href="">Le comptoir du Loup (Solwaster)</a>
-            <br>- <a href="https://bergamote-fleurs.be/vins/">Bergamote (Pepinster)</a>
-            <br>- <a href="http://www.terredherbage.be/index.html">Terre d'Herbage</a>
-            <br>- <a href="">Le Wallonia (Trooz)</a></p>
-
-            <h1>Restaurants et bars</h1>
-            <p>- <a href="http://www.auxalentours.be/">Aux Alentours</a>
-            <br>- <a href="http://www.afspanningdeswaen.be/">Afspanning de Swaen</a>
-            <br>- <a href="http://www.gulpdal.nl/">Romantic Hotel "Het Gulpdal"</a>
-            <br>- <a href="http://blaes.business.site/">Le Blaes</a></p>
-
         -->
         </main>
 
         <div class="footer">
-            
-
             <h1>bonjour@dalaheim-castellum.eu
             <br>0032 498 83 74</h1>
-
             <h1><a href="https://www.instagram.com/dalaheimcastellum/" target="_blank" rel="noopener noreferrer">Instagram</a>
             <a href="https://www.facebook.com/profile.php?id=100057304575589" target="_blank" rel="noopener noreferrer">Facebook</a></h1>
-
             <p>© Dalaheim Castellum, 2024
-            <br>Web-développé par <a href="https://baptistelevaux.github.io/">Baptiste Levaux</a></p>
+            <br>Web-développé par <a href="https://baptistelevaux.github.io/">FreePounzel</a></p>
         </div>
 
         <footer>
